updated UI and fixed navbar dates not aligning correctly with query dates

--- a/f1-news-app/src/components/component.css
+++ b/f1-news-app/src/components/component.css
@@ -1,3 +1,14 @@
+.countdown{
+    /* background-color: #006341; */
+    color: #0B0B0B;
+    font-size: 2.5em;
+    font-weight: bold;
+    text-align: center;
+    width: 90%;
+    left: 10%;
+    position: relative;
+}
+
 .title-text{
     color: #e10600;
     font-size: 1.5em;
@@ -11,6 +22,8 @@
 .post-container{
     display: flex;
     flex-direction: column;
+    
+
 }
 
 .summary-text{
@@ -52,14 +65,37 @@
     left: 0;
     width: 200px;
     top: 0;
-    padding-top: 5%;
     /* top: 150px; */
     height: 100vh;
     display: flex;
     flex-direction: column;
     background-color: #e10600;
     border-top-right-radius: 7.5px;
+    box-shadow:  4px 4px 4px rgba(0, 0, 0, 0.2);
 }
+
+.navbar-toggle-btn{
+    position: relative;
+    top : 0;
+    left: 150px;
+    width: 50px;
+    background-color: #e10600;
+    color: white;
+}
+
+.navbar-toggled-btn{
+    position: relative;
+    top : 0;
+    left: 0px;
+    width: 50px;
+    background-color: #e10600;
+    color: white;
+}
+
+.navbar-toggled{
+    width: 50px;
+}
+
 .nav-button{
     background-color: #e10600;
     color: white;
@@ -75,20 +111,17 @@
 .nav-button-group{
     display: flex;
     flex-direction: column;
+
     
 
 }
 
-.countdown{
-    /* background-color: #006341; */
-    color: #0B0B0B;
-    font-size: 2.5em;
-    font-weight: bold;
-    text-align: center;
-    width: 90%;
-    left: 10%;
+.navbar-links{
     position: relative;
+    top : 10%;
 }
+
+
 .navbar-title{
     color: white;
     font-size: 1em;
@@ -155,16 +188,23 @@
 
 .tweet-list {
     display: grid;
-    grid-template-columns: 1fr 1.5fr;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-gap: 0px;
     position: relative;
-    left: 15%;
+    left: 20%;
+    width: 70%;
+    justify-content: center;
+    padding: 0;
+    justify-items: center;
+    row-gap: 25px;
 }
   
 .tweet {
     height: 500px; /* Fixed height */
     width: auto; /* Fixed width */
     overflow: auto; /* Adds scrollbars if content overflows */
+    max-width: 400px;
+    max-height: 400px;
    
 }
 
